--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "expressjs": "^1.0.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+      "serverless-http": "^2.7.0"
   }
 }
